@@ -426,9 +426,6 @@
   <module id="gnome-alsamixer">
     <branch id="HEAD"/>
   </module>
-  <module id="gnome-app-install">
-    <branch id="HEAD"/>
-  </module>
   <module id="gnome-applets">
     <_description>Gnome Applets</_description>
     <maintainer id="davyd"/>
@@ -595,11 +592,6 @@
     <branch id="HEAD" stringfrozen="true"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
-  </module>
-  <module id="gnome-glossary">
-    <branch id="HEAD">
-      <domain id="glossary"/>
-    </branch>
   </module>
   <module id="gnome-hello">
     <branch id="HEAD"/>
@@ -1127,9 +1119,6 @@
     <branch id="HEAD"/>
   </module>
    <module id="ooo-build">
-    <branch id="HEAD"/>
-  </module>
-  <module id="optimystic">
     <branch id="HEAD"/>
   </module>
   <module id="orca">
