@@ -164,13 +164,11 @@
     <module id="glade"/>
     <module id="glom"/>
     <module id="gnome-alsamixer"/>
-    <module id="gnome-app-install"/>
     <module id="gnome-blog"/>
     <module id="gnome-bluetooth"/>
     <module id="gnome-build"/>
     <module id="gnome-commander"/>
     <module id="gnome-cups-manager"/>
-    <module id="gnome-glossary"/>
     <module id="gnome-hello"/>
     <module id="gnome-jabber"/>
     <module id="gnome-mount"/>
@@ -226,7 +224,6 @@
     <module id="NetworkManager" branch="NETWORKMANAGER_0_6_0_RELEASE"/>
     <module id="ontv"/>
     <module id="ooo-build"/>
-    <module id="optimystic"/>
     <module id="phonemgr"/>
     <module id="pitivi"/>
     <module id="pybliographer" branch="v_1_0_x"/>
