@@ -1,5 +1,10 @@
 2007-03-12  David Lodge <dave@cirt.net>
 
+	* releases.xml.in: Removed gnome-app-install, gnome-glossary, optimystic
+	* gnome-modules.xml.in: as they aren't in svn
+
+2007-03-12  David Lodge <dave@cirt.net>
+
 	* releases.xml.in: Added tracker and removed uf-view
 	* modules.xml.in: Removed uf-view (isn't in svn)
 
